# PeakActivity

./: .firebaserc  .gitignore  PRIVACY.md  PROJECT_ANALYSIS_REPORT.md  README.md  aw-component-relationships.txt  checklist.md  devam.md  firestore.rules  storage.rules  todo.md  version.md
.firebase/: hosting.cHVibGlj.cache
.github/: copilot-instructions.md
aw-qt/src-tauri/: Cargo.toml
aw-qt/src-tauri/src/: commands.rs  main.rs  notifications.rs  speech_recognition.rs  tray.rs
aw-server/: pyproject.toml  requirements.txt
chatcontext/: Project-Checklist-Update-details.md  Project-Checklist-Update-summary.md  ai-integration-phase2-summary.md  ai-integration-phase2.md  chat-details.md  firebase-functions-deployment-errors-and-solutions-summary.md  firebase-functions-deployment-errors-and-solutions.md  firebase-tauri-integration-summary.md  firebase-tauri-integration.md  initial-phase-development-summary.md  initial-phase-development.md
docs-tr/: 01-Proje-Genel-Tanitimi-ve-Vizyonu.md  02-Mimari-Karar-Kayitlari-ADR.md  03-Veri-Akisi-ve-Senkronizasyon.md  04-Guvenlik-ve-Gizlilik-Standartlari.md  05-API-Referansi-ve-Endpoint-Aciklamalari.md  06-AI-Servisleri-ve-Model-Entegrasyonu.md  07-Performans-ve-Kaynak-Yonetimi.md  08-Uluslararasilastirma-i18n-ve-Cok-Dilli-Destek.md  09-Hata-Yonetimi-ve-Loglama.md  10-Surum-Yonetimi-ve-Degisiklik-Takibi.md  11-Kullanici-Geri-Bildirimi-ve-Katki-Rehberi.md  12-Sikca-Sorulan-Sorular-FAQ.md  13-Dosya-Dizin-Yapisi-ve-Organizasyon.md  14-aw-server-Modulu-Detayli-Dokumantasyon.md  15-aw-qt-Modulu-Detayli-Dokumantasyon.md
(+352 files in other folders)
