[package]
name = "aw-qt-tauri"
version = "0.1.0"
description = "A Tauri application for ActivityWatch Qt integration."
authors = ["Ahmet Uzun"]
license = ""
repository = ""
default-run = "aw-qt-tauri"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = ["shell-open", "notification"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"] } # Asenkron işlemleri yönetmek için
rusqlite = { version = "0.30.0", features = ["bundled", "sqlcipher"] } # SQLite veritabanı için
async-trait = "0.1.77" # Async trait'ler için
reqwest = { version = "0.11.23", features = ["json", "blocking"] } # HTTP istekleri için
url = "2.5.0" # URL işlemleri için
tauri-winrt-notification = "0.7.2" # Windows Toast bildirimleri için
sysinfo = "0.29.11" # Sistem bilgileri (CPU/RAM) için
aes-gcm = { version = "0.10.1", features = ["aes"] }
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["std"] }

[features]
# Bu, "tauri dev" komutuyla tauri-build'i derlerken "custom-protocol" özelliğini etkinleştirir
# Eğer diğer tauri özelliklerine ihtiyacınız varsa, onları buraya ekleyin: https://tauri.app/v1/api/config#feature-flags
custom-protocol = ["tauri/custom-protocol"] 